--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,6 +25,53 @@ body {
     z-index: -2;
 }
 
+#content_mitte {
+    border-left: solid 2px #fff;
+    border-right: solid 2px #fff;
+    height: 100%;
+    margin: 0 300px 0 180px;
+    padding: 0 10px 10px;
+    position: relative;
+}
+
+#content_rechts {
+    float: right;
+    height: 100%;
+    width: 300px;
+}
+
+#content_double {
+    height: 100%;
+    margin: 0 0 0 180px;
+    padding: 0 10px 10px;
+    position: relative;
+}
+
+@media screen and (max-width: 1024px) {
+    #content_mitte {
+        margin: 0 300px 0 0;
+    }
+
+    #content_double {
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 832px) {
+    #content_mitte {
+        margin: 0;
+    }
+
+    #content_rechts {
+        float: none;
+        width: auto;
+
+        &.optional {
+            display: none;
+        }
+    }
+}
+
 input {
     font-size: 12px;
 }
